# payment-bot

./: .envrc  .gitignore  pyproject.toml  requirements.txt  vercel.json
api/: index.py
chapa_bot/: main.py
